RSA mode casing corrections

--- a/src/rsa/sections/03-supported.adoc
+++ b/src/rsa/sections/03-supported.adoc
@@ -9,26 +9,26 @@ The following algorithms *MAY* be advertised by the ACVP compliant cryptographic
 |===
 | Algorithm | Mode | Revision | Standard
 
-| "RSA" | "KeyGen" | "FIPS186-4" | <<FIPS186-4>>
-| "RSA" | "KeyGen" | "FIPS186-5" | <<FIPS186-5>>
-| "RSA" | "SigGen" | "FIPS186-4" | <<FIPS186-4>>
-| "RSA" | "SigGen" | "FIPS186-5" | <<FIPS186-5>>
-| "RSA" | "SigVer" | "FIPS186-5" | <<FIPS186-5>>
-| "RSA" | "SigVer" | "FIPS186-4" | <<FIPS186-4>>
-| "RSA" | "SigVer" | "FIPS186-2" | <<FIPS186-2>>
-| "RSA" | "SignaturePrimitive" | "1.0" | <<FIPS186-5>>
-| "RSA" | "DecryptionPrimitive" | "1.0" | <<SP800-56B>>
+| "RSA" | "keyGen" | "FIPS186-4" | <<FIPS186-4>>
+| "RSA" | "keyGen" | "FIPS186-5" | <<FIPS186-5>>
+| "RSA" | "sigGen" | "FIPS186-4" | <<FIPS186-4>>
+| "RSA" | "sigGen" | "FIPS186-5" | <<FIPS186-5>>
+| "RSA" | "sigVer" | "FIPS186-5" | <<FIPS186-5>>
+| "RSA" | "sigVer" | "FIPS186-4" | <<FIPS186-4>>
+| "RSA" | "sigVer" | "FIPS186-2" | <<FIPS186-2>>
+| "RSA" | "signaturePrimitive" | "1.0" | <<FIPS186-5>>
+| "RSA" | "decryptionPrimitive" | "1.0" | <<SP800-56B>>
 |===
 
-These will be refered to as algorithm / mode / revision throughout the document, for example RSA / KeyGen / 1.0.
+These will be refered to as algorithm / mode / revision throughout the document, for example RSA / keyGen / 1.0.
 
 [[supported_conformances]]
 === Supported Conformances for RSA Algorithms
 
 The following RSA algorithms *MAY* claim conformance to <<SP800-106>>:
 
-* RSA / SigGen / FIPS186-4
-* RSA / SigGen / FIPS186-5
-* RSA / SigVer / FIPS186-2
-* RSA / SigVer / FIPS186-4
-* RSA / SigVer / FIPS186-5
+* RSA / sigGen / FIPS186-4
+* RSA / sigGen / FIPS186-5
+* RSA / sigVer / FIPS186-2
+* RSA / sigVer / FIPS186-4
+* RSA / sigVer / FIPS186-5
