--- a/src/rsa/sections/05-keygen-capabilities.adoc
+++ b/src/rsa/sections/05-keygen-capabilities.adoc
@@ -26,7 +26,7 @@ An example of this is the following
 ----
 {
     "algorithm": "RSA",
-    "mode": "KeyGen",
+    "mode": "keyGen",
     "revision": "FIPS186-4",
     "prereqVals": [{"algorithm": "DRBG", "valValue": "1234"}, {"algorithm": "SHA", "valValue": "5678"}],
     "infoGeneratedByServer": false,
@@ -126,7 +126,7 @@ The following is an example
 ----
 {
     "algorithm": "RSA",
-    "mode": "KeyGen",
+    "mode": "keyGen",
     "revision": "FIPS186-5",
     "prereqVals": [{"algorithm": "DRBG", "valValue": "1234"}, {"algorithm": "SHA", "valValue": "5678"}],
     "infoGeneratedByServer": false,
