--- a/src/rsa/sections/05-siggen-capabilities.adoc
+++ b/src/rsa/sections/05-siggen-capabilities.adoc
@@ -27,7 +27,7 @@ The following RSA / SigGen / 1.0 capabilities *MAY* be advertised by the ACVP co
 
 NOTE: The 'saltLen' property for each hash algorithm *SHALL* only be present of the 'sigType' is "pss". The values allowed in PSS signature generation is between 0 and the length of the corresponding hash function output block (in bytes), the end points included.
 
-The following is an example of a registration for RSA / SigGen / FIPS186-4
+The following is an example of a registration for RSA / sigGen / FIPS186-4
 
 [source, json]
 ----
@@ -113,7 +113,7 @@ The following is an example of a registration for RSA / SigGen / FIPS186-4
 [[mode_SigGenCap_FIPS186-5]]
 ==== RSA SigGen FIPS186-5 Capabilities Table
 
-The following RSA / SigGen / FIPS186-5 capabilities *MAY* be advertised by the ACVP compliant crypto module:
+The following RSA / sigGen / FIPS186-5 capabilities *MAY* be advertised by the ACVP compliant crypto module:
 
 [[SigGenRSAFIPS186-5]]
 .Supported RSA SigGen FIPS186-5 JSON Values
@@ -131,7 +131,7 @@ The following RSA / SigGen / FIPS186-5 capabilities *MAY* be advertised by the A
 
 NOTE: The 'saltLen' property for each hash algorithm *SHALL* only be present of the 'sigType' is "pss". The values allowed in PSS signature generation is between 0 and the length of the corresponding hash function output block (in bytes), the end points included.
 
-For an example of the RSA / SigGen / FIPS186-5 registration see the following abbreviated example for PSS
+For an example of the RSA / sigGen / FIPS186-5 registration see the following abbreviated example for PSS
 
 [source, json]
 ----
