--- a/src/rsa/sections/05-sigver-capabilities.adoc
+++ b/src/rsa/sections/05-sigver-capabilities.adoc
@@ -1,16 +1,16 @@
 [[rsa_sigver_capabilities]]
 === RSA SigVer Mode Capabilities
 
-The RSA / SigVer / * mode capabilities are advertised as JSON objects within the array of 'capabilities' as part of the 'capability_exchange' element of the ACVP JSON registration message. See the ACVP specification for details on the registration message.
+The RSA / sigVer / * mode capabilities are advertised as JSON objects within the array of 'capabilities' as part of the 'capability_exchange' element of the ACVP JSON registration message. See the ACVP specification for details on the registration message.
 
-Each RSA / SigVer / * mode capability is advertised as a self-contained JSON object consisting of the algorithm, mode, and capabilities array. The capabilities array may contain multiple elements, each pertaining to a sigType that is supported by the client for the RSA mode being advertised.
+Each RSA / sigVer / * mode capability is advertised as a self-contained JSON object consisting of the algorithm, mode, and capabilities array. The capabilities array may contain multiple elements, each pertaining to a sigType that is supported by the client for the RSA mode being advertised.
 
 The following table defines the capabilities that may be advertised by the ACVP compliant crypto modules.
 
 [[legacySigVerRSAMod]]
 ==== RSA SigVer FIPS186-2 Capabilities Table
 
-The following RSA / SigVer / FIPS186-2 capabilities *MAY* be advertised by the ACVP compliant crypto module:
+The following RSA / sigVer / FIPS186-2 capabilities *MAY* be advertised by the ACVP compliant crypto module:
 
 [[rsa_sigver_fips186-2_capabilities]]
 .Supported RSA SigVer FIPS186-2 Capabilities
@@ -32,7 +32,7 @@ For an example of the registration for RSA / SigVer / FIPS186-2, see the followi
 [[SigVerFIPS186-4RSAMod]]
 ==== RSA SigVer FIPS186-4 Capabilities Table
 
-The following RSA / SigVer / FIPS186-4 capabilities *MAY* be advertised by the ACVP compliant crypto module:
+The following RSA / sigVer / FIPS186-4 capabilities *MAY* be advertised by the ACVP compliant crypto module:
 
 [[rsa_sigver_fips186-4_capabilities]]
 .Supported RSA SigVer FIPS186-4 Capabilities
@@ -49,7 +49,7 @@ The following RSA / SigVer / FIPS186-4 capabilities *MAY* be advertised by the A
 
 NOTE: The 'saltLen' property for each hash algorithm *SHALL* only be present of the 'sigType' is "pss". The values allowed in PSS signature generation is between 0 and the length of the corresponding hash function output block (in bytes), the end points included except for when 1024 is the modulo size. In this case, the maximum 'saltLen' for SHA2-512 is 62 bytes.
 
-The following is an example of the RSA / SigVer / FIPS186-4 registration
+The following is an example of the RSA / sigVer / FIPS186-4 registration
 
 [source, json]
 ----
@@ -127,7 +127,7 @@ The following is an example of the RSA / SigVer / FIPS186-4 registration
 [[SigVerFIPS186-5RSAMod]]
 ==== RSA SigVer FIPS186-5 Capabilities Table
 
-The following RSA / SigVer / FIPS186-5 capabilities *MAY* be advertised by the ACVP compliant crypto module:
+The following RSA / sigVer / FIPS186-5 capabilities *MAY* be advertised by the ACVP compliant crypto module:
 
 [[rsa_sigver_fips186-5_capabilities]]
 .Supported RSA SigVer FIPS186-5 Capabilities
@@ -145,7 +145,7 @@ The following RSA / SigVer / FIPS186-5 capabilities *MAY* be advertised by the A
 
 NOTE: The 'saltLen' property for each hash algorithm *SHALL* only be present of the 'sigType' is "pss". The values allowed in PSS signature generation is between 0 and the length of the corresponding hash function output block (in bytes), the end points included.
 
-See the following abbreviated example for a PSS registration for RSA / SigVer / FIPS186-5
+See the following abbreviated example for a PSS registration for RSA / sigVer / FIPS186-5
 
 [source, json]
 ----
