--- a/src/rsa/sections/06-decprim-test-vectors.adoc
+++ b/src/rsa/sections/06-decprim-test-vectors.adoc
@@ -24,7 +24,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 |===
 | JSON Values | Description | JSON Type
 
-| tcId | Test case idenfitier | integer
+| tcId | Test case identifier | integer
 | resultsArray | An array of ciphertexts | array
 | ciphertext | An individual ciphertext | hex
 |===
