--- a/src/rsa/sections/06-keygen-test-vectors.adoc
+++ b/src/rsa/sections/06-keygen-test-vectors.adoc
@@ -49,14 +49,14 @@ The difference between revision "FIPS186-4" and "FIPS186-5" within the prompts l
 | qRand | the random Q for testing probable primes according to <<FIPS186-4>> or <<FIPS186-5>> | hex
 |===
 
-Here is an abbreviated yet fully constructed example of the prompt for RSA / KeyGen / FIPS186-5
+Here is an abbreviated yet fully constructed example of the prompt for RSA / keyGen / FIPS186-5
 
 [source, json]
 ----
 {
   "vsId": 2,
   "algorithm": "RSA",
-  "mode": "KeyGen",
+  "mode": "keyGen",
   "revision": "FIPS186-5",
   "testGroups": [
     {
