--- a/src/rsa/sections/06-sigver-test-vectors.adoc
+++ b/src/rsa/sections/06-sigver-test-vectors.adoc
@@ -2,7 +2,7 @@
 [[rsa_sigver_tgjs]]
 === RSA SigVer Test Groups JSON Schema
 
-The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the RSA / SigVer / * JSON elements of the Test Group JSON object
+The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the RSA / sigVer / * JSON elements of the Test Group JSON object
 
 .RSA SigVer Test Group JSON Objects
 |===
@@ -24,7 +24,7 @@ The testGroups element at the top level in the test vector JSON object is an arr
 
 The 'tgId', 'testType' and 'tests' objects *MUST* appear in every test group element communicated from the server to the client as a part of a prompt. Other properties are dependent on which 'testType' (see <<testtypes>>) the group is addressing.
 
-NOTE: The 'maskFunction' property will only be present for RSA / SigVer / FIPS186-5 inside of test groups for the 'sigType' "pss".
+NOTE: The 'maskFunction' property will only be present for RSA / sigVer / FIPS186-5 inside of test groups for the 'sigType' "pss".
 
 === Test Cases for sigVer FIPS186-5, FIPS186-4, and FIPS186-2
 
@@ -41,7 +41,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 | randomValueLen | The random value's bit length | integer
 |===
 
-Here is an abbreviated yet fully constructed example of the prompt for RSA / SigVer / FIPS186-4. The only difference in the structure between RSA / SigVer / FIPS186-4 and RSA / SigVer / FIPS186-5 is the inclusion of the 'maskFunction' property in the 'testGroup' for RSA / SigVer / FIPS186-5.
+Here is an abbreviated yet fully constructed example of the prompt for RSA / sigVer / FIPS186-4. The only difference in the structure between RSA / sigVer / FIPS186-4 and RSA / sigVer / FIPS186-5 is the inclusion of the 'maskFunction' property in the 'testGroup' for RSA / sigVer / FIPS186-5.
 
 [source, json]
 ----
