--- a/src/rsa/sections/07-siggen-responses.adoc
+++ b/src/rsa/sections/07-siggen-responses.adoc
@@ -26,14 +26,14 @@ The following table describes the JSON elements for the test case responses for 
 | signature | The computed signature | hex
 |===
 
-The following is an example of the response for RSA / SigGen / *
+The following is an example of the response for RSA / sigGen / *
 
 [source, json]
 ----
 {
   "vsId": 0,
   "algorithm": "RSA",
-  "mode": "SigGen",
+  "mode": "sigGen",
   "revision": "FIPS186-4",
   "isSample": true,
   "testGroups": [
