--- a/src/rsa/sections/06-siggen-test-vectors.adoc
+++ b/src/rsa/sections/06-siggen-test-vectors.adoc
@@ -21,12 +21,12 @@ The testGroups element at the top level in the test vector JSON object is an arr
 
 The 'tgId', 'testType' and 'tests' objects *MUST* appear in every test group element communicated from the server to the client as a part of a prompt. Other properties are dependent on which 'testType' (see <<testtypes>>) the group is addressing.
 
-NOTE: The 'maskFunction' property will only be present for RSA / SigGen / FIPS186-5 inside of test groups for the 'sigType' "pss".
+NOTE: The 'maskFunction' property will only be present for RSA / sigGen / FIPS186-5 inside of test groups for the 'sigType' "pss".
 
 [[rsa_siggen_tvjs]]
 === RSA SigGen Test Cases JSON Schema
 
-Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / SigGen / * test vector.
+Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / sigGen / * test vector.
 
 .RSA SigGen Test Case JSON Objects
 |===
@@ -41,7 +41,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 
 NOTE: The 'saltLen' property will only be present in test groups for the 'sigType' "pss".
 
-Here is an abbreviated yet fully constructed example of the prompt for RSA / SigGen / FIPS186-4. The only difference in the structure between RSA / SigGen / FIPS186-4 and RSA / SigGen / FIPS186-5 is the inclusion of the 'maskFunction' property in the 'testGroup' for RSA / SigGen / FIPS186-5.
+Here is an abbreviated yet fully constructed example of the prompt for RSA / sigGen / FIPS186-4. The only difference in the structure between RSA / sigGen / FIPS186-4 and RSA / sigGen / FIPS186-5 is the inclusion of the 'maskFunction' property in the 'testGroup' for RSA / sigGen / FIPS186-5.
 
 [source, json]
 ----
