--- a/src/rsa/sections/07-sigver-responses.adoc
+++ b/src/rsa/sections/07-sigver-responses.adoc
@@ -1,9 +1,9 @@
 [[rsa_sigver_tvjs]]
 === RSA SigVer Test Group Responses
 
-Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / SigVer / * test vector.
+Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / sigVer / * test vector.
 
-The following table describes the JSON elements for the test case responses for RSA / SigVer / * .
+The following table describes the JSON elements for the test case responses for RSA / sigVer / * .
 
 [[rsa_sigver_vs_tr_table]]
 .RSA SigVer Test Case Results JSON Object
@@ -14,14 +14,14 @@ The following table describes the JSON elements for the test case responses for 
 | testPassed | Whether or not the signature provided was valid | boolean
 |===
 
-The following is an example of the response for RSA / SigVer / *
+The following is an example of the response for RSA / sigVer / *
 
 [source, json]
 ----
 {
   "vsId": 0,
   "algorithm": "RSA",
-  "mode": "SigVer",
+  "mode": "sigVer",
   "revision": "FIPS186-4",
   "isSample": true,
   "testGroups": [
