Various casing changes between DSA, ECDSA, EDDSA, SafePrimes, and RSA

--- a/src/rsa/sections/05-sigver-capabilities.adoc
+++ b/src/rsa/sections/05-sigver-capabilities.adoc
@@ -1,5 +1,5 @@
-[[rsa_sigver_capabilities]]
-=== RSA SigVer Mode Capabilities
+[[rsa_sigVer_capabilities]]
+=== RSA sigVer Mode Capabilities
 
 The RSA / sigVer / * mode capabilities are advertised as JSON objects within the array of 'capabilities' as part of the 'capability_exchange' element of the ACVP JSON registration message. See the ACVP specification for details on the registration message.
 
@@ -7,13 +7,13 @@ Each RSA / sigVer / * mode capability is advertised as a self-contained JSON obj
 
 The following table defines the capabilities that may be advertised by the ACVP compliant crypto modules.
 
-[[legacySigVerRSAMod]]
-==== RSA SigVer FIPS186-2 Capabilities Table
+[[legacysigVerRSAMod]]
+==== RSA sigVer FIPS186-2 Capabilities Table
 
 The following RSA / sigVer / FIPS186-2 capabilities *MAY* be advertised by the ACVP compliant crypto module:
 
-[[rsa_sigver_fips186-2_capabilities]]
-.Supported RSA SigVer FIPS186-2 Capabilities
+[[rsa_sigVer_fips186-2_capabilities]]
+.Supported RSA sigVer FIPS186-2 Capabilities
 |===
 | JSON value | Description | JSON type | Valid values
 
@@ -27,15 +27,15 @@ The following RSA / sigVer / FIPS186-2 capabilities *MAY* be advertised by the A
 
 NOTE: The 'saltLen' property for each hash algorithm *SHALL* only be present of the 'sigType' is "pss". The values allowed in PSS signature generation is between 0 and the length of the corresponding hash function output block (in bytes), the end points included except for when 1024 is the modulo size. In this case, the maximum 'saltLen' for SHA2-512 is 62 bytes.
 
-For an example of the registration for RSA / SigVer / FIPS186-2, see the following example for RSA / SigVer / FIPS186-4. The formats are identical even though the individual allowed values might change.
+For an example of the registration for RSA / sigVer / FIPS186-2, see the following example for RSA / sigVer / FIPS186-4. The formats are identical even though the individual allowed values might change.
 
-[[SigVerFIPS186-4RSAMod]]
-==== RSA SigVer FIPS186-4 Capabilities Table
+[[sigVerFIPS186-4RSAMod]]
+==== RSA sigVer FIPS186-4 Capabilities Table
 
 The following RSA / sigVer / FIPS186-4 capabilities *MAY* be advertised by the ACVP compliant crypto module:
 
-[[rsa_sigver_fips186-4_capabilities]]
-.Supported RSA SigVer FIPS186-4 Capabilities
+[[rsa_sigVer_fips186-4_capabilities]]
+.Supported RSA sigVer FIPS186-4 Capabilities
 |===
 | JSON value | Description | JSON type | Valid values
 
@@ -124,13 +124,13 @@ The following is an example of the RSA / sigVer / FIPS186-4 registration
 }
 ----
 
-[[SigVerFIPS186-5RSAMod]]
-==== RSA SigVer FIPS186-5 Capabilities Table
+[[sigVerFIPS186-5RSAMod]]
+==== RSA sigVer FIPS186-5 Capabilities Table
 
 The following RSA / sigVer / FIPS186-5 capabilities *MAY* be advertised by the ACVP compliant crypto module:
 
-[[rsa_sigver_fips186-5_capabilities]]
-.Supported RSA SigVer FIPS186-5 Capabilities
+[[rsa_sigVer_fips186-5_capabilities]]
+.Supported RSA sigVer FIPS186-5 Capabilities
 |===
 | JSON value | Description | JSON type | Valid values
 
