--- a/src/rsa/sections/07-keygen-responses.adoc
+++ b/src/rsa/sections/07-keygen-responses.adoc
@@ -1,11 +1,11 @@
-[[rsa_keygen_response]]
-=== RSA KeyGen Test Group Responses
+[[rsa_keyGen_response]]
+=== RSA keyGen Test Group Responses
 
-Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / KeyGen / * test vector.
+Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / keyGen / * test vector.
 
-The following table describes the JSON elements for the response to a RSA / KeyGen / * test vector.
+The following table describes the JSON elements for the response to a RSA / keyGen / * test vector.
 
-[[rsa_keygen_vs_tr_table]]
+[[rsa_keyGen_vs_tr_table]]
 .RSA Test Case Results JSON Object
 |===
 | JSON Value | Description | JSON type
@@ -38,7 +38,7 @@ NOTE: If the 'infoGeneratedByServer' test group property is true, then the only 
 
 NOTE: The 'e' property *SHALL* only be included when the 'infoGeneratedByServer' is false and the 'pubExpMode' is "random".
 
-Use the following applicability grid to determine which properties should be present based on the 'randPQ' test group property. The 'randPQ' property values for RSA / KeyGen / FIPS186-4 are based on the section numbers in Appendix B in <<FIPS186-4>>. For RSA / KeyGen / FIPS186-5, the property values are based on the true names of the generation methods. The RSA / KeyGen / FIPS186-5 names will be listed in the grid. This grid only applies to 'AFT' test types.
+Use the following applicability grid to determine which properties should be present based on the 'randPQ' test group property. The 'randPQ' property values for RSA / keyGen / FIPS186-4 are based on the section numbers in Appendix B in <<FIPS186-4>>. For RSA / keyGen / FIPS186-5, the property values are based on the true names of the generation methods. The RSA / keyGen / FIPS186-5 names will be listed in the grid. This grid only applies to 'AFT' test types.
 
 .RSA Test Case Applicability Grid For AFT Responses
 |===
@@ -59,9 +59,9 @@ Use the following applicability grid to determine which properties should be pre
 | bitlens | no | no | yes | yes | yes
 |===
 
-NOTE: If the 'crt' key format is used for the group, substitute 'd' with the appropriate values from <<rsa_keygen_vs_tr_table>>.
+NOTE: If the 'crt' key format is used for the group, substitute 'd' with the appropriate values from <<rsa_keyGen_vs_tr_table>>.
 
-The following is an example of an RSA / KeyGen / * response. Test group 1 uses the provable prime (B.3.2) generation method. Test group 2 uses the provable prime with conditions (B.3.4) generation method. Test group 3 uses the provable prime with probable conditions (B.3.5) generation method. Test group 4 uses the probable prime with conditions (B.3.6) generation method. Test group 5 is for the 'KAT' test type for probable prime (B.3.3) generation method. Test group 6 uses the probable prime (B.3.3) generation method. In this example, 'infoGeneratedByServer' is set to true.
+The following is an example of an RSA / keyGen / * response. Test group 1 uses the provable prime (B.3.2) generation method. Test group 2 uses the provable prime with conditions (B.3.4) generation method. Test group 3 uses the provable prime with probable conditions (B.3.5) generation method. Test group 4 uses the probable prime with conditions (B.3.6) generation method. Test group 5 is for the 'KAT' test type for probable prime (B.3.3) generation method. Test group 6 uses the probable prime (B.3.3) generation method. In this example, 'infoGeneratedByServer' is set to true.
 
 
 [source, json]
