--- a/src/rsa/sections/07-sigver-responses.adoc
+++ b/src/rsa/sections/07-sigver-responses.adoc
@@ -1,12 +1,12 @@
-[[rsa_sigver_tvjs]]
-=== RSA SigVer Test Group Responses
+[[rsa_sigVer_tvjs]]
+=== RSA sigVer Test Group Responses
 
 Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / sigVer / * test vector.
 
 The following table describes the JSON elements for the test case responses for RSA / sigVer / * .
 
-[[rsa_sigver_vs_tr_table]]
-.RSA SigVer Test Case Results JSON Object
+[[rsa_sigVer_vs_tr_table]]
+.RSA sigVer Test Case Results JSON Object
 |===
 | JSON Value | Description | JSON type
 
