--- a/src/rsa/sections/06-siggen-test-vectors.adoc
+++ b/src/rsa/sections/06-siggen-test-vectors.adoc
@@ -1,10 +1,10 @@
 
-[[rsa_siggen_tgjs]]
-=== RSA SigGen Test Groups JSON Schema
+[[rsa_sigGen_tgjs]]
+=== RSA sigGen Test Groups JSON Schema
 
-The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the RSA / SigGen / * JSON elements of the Test Group JSON object
+The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the RSA / sigGen / * JSON elements of the Test Group JSON object
 
-.RSA SigGen Test Group JSON Objects
+.RSA sigGen Test Group JSON Objects
 |===
 | JSON Values | Description | JSON Type
 
@@ -16,19 +16,19 @@ The testGroups element at the top level in the test vector JSON object is an arr
 | conformance | Signifies all test cases within the group should utilize random message hashing as described in <<SP800-106>> | string
 | maskFunction | The mask function used for PSS signature scheme | string
 | testType | Describes the operation the client should perform on the tests data | string
-| tests | Array of individual test cases, see <<rsa_siggen_tvjs>> | array
+| tests | Array of individual test cases, see <<rsa_sigGen_tvjs>> | array
 |===
 
 The 'tgId', 'testType' and 'tests' objects *MUST* appear in every test group element communicated from the server to the client as a part of a prompt. Other properties are dependent on which 'testType' (see <<testtypes>>) the group is addressing.
 
 NOTE: The 'maskFunction' property will only be present for RSA / sigGen / FIPS186-5 inside of test groups for the 'sigType' "pss".
 
-[[rsa_siggen_tvjs]]
-=== RSA SigGen Test Cases JSON Schema
+[[rsa_sigGen_tvjs]]
+=== RSA sigGen Test Cases JSON Schema
 
 Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / sigGen / * test vector.
 
-.RSA SigGen Test Case JSON Objects
+.RSA sigGen Test Case JSON Objects
 |===
 | JSON Values | Description | JSON Type
 
