--- a/src/rsa/sections/06-test-vectors.adoc
+++ b/src/rsa/sections/06-test-vectors.adoc
@@ -16,5 +16,5 @@ The test vector set JSON schema is a multi-level hierarchy that contains meta da
 | algorithm | The algorithm used for the test vectors | string
 | mode | The mode used for the test vectors | string
 | revision | The algorithm testing revision to use | string
-| testGroups | Array of test group JSON objects, which are defined in <<rsa_keygen_tgjs>>, <<rsa_siggen_tgjs>>, <<rsa_sigver_tgjs>>, <<rsa_sigprim_tgjs>> or <<rsa_decprim_tgjs>> depending on the algorithm | array
+| testGroups | Array of test group JSON objects, which are defined in <<rsa_keyGen_tgjs>>, <<rsa_sigGen_tgjs>>, <<rsa_sigVer_tgjs>>, <<rsa_sigprim_tgjs>> or <<rsa_decprim_tgjs>> depending on the algorithm | array
 |===
