Minor clarifications on Required/Optional fields.

--- a/src/protocol/sections/11-messaging.adoc
+++ b/src/protocol/sections/11-messaging.adoc
@@ -428,9 +428,8 @@ Request the creation of a new Vendor.
 
 ===== Request
 
-`name` is required and all other properties are OPTIONAL.
-`url` is not allowed.
-`contactUrl` is not allowed.
+`name` is required and all other defined properties are OPTIONAL.
+Any additional properties included in the request are ignored.
 
 [source,json]
 ....
@@ -638,7 +637,8 @@ Request the creation of a new Person.
 
 ===== Request
 
-`url` is not allowed.
+`fullName` and `vendorUrl` are required. Other defined resource properties are OPTIONAL. 
+Any additional properties included in the request are ignored.
 
 [source,json]
 ....
@@ -785,6 +785,9 @@ Register a new module.
 
 ===== Request
 
+`name`, `vendorUrl`, and `description` are required. Other defined resource properties are OPTIONAL. 
+Any additional properties included in the request are ignored.
+
 [source,json]
 ....
 [
@@ -897,6 +900,9 @@ Available <<query_parameters>>:
 Create a new operational environment.
 
 ===== Request
+
+`name` is required. Other defined resource properties are OPTIONAL. 
+Any additional properties included in the request are ignored.
 
 [source,json]
 ....
@@ -1043,6 +1049,9 @@ Available <<query_parameters>>:
 Register a new dependency.
 
 ===== Request
+
+`name` is required. Other defined resource properties are OPTIONAL. 
+Any additional properties included in the request are ignored.
 
 [source,json]
 ....
