--- a/src/xof/sections/04-testtypes.adoc
+++ b/src/xof/sections/04-testtypes.adoc
@@ -35,14 +35,14 @@ MCT(Msg, MaxOutLen, MinOutLen)
   for (j = 0; j < 100; j++) 
   {
     for (i = 1; i < 1001; i++) 
-	{
+  {
       InnerMsg = Left(Output[i-1] || ZeroBits(128), 128);
       Output[i] = CSHAKE(InnerMsg, OutputLen, FunctionName, Customization);
       Rightmost_Output_bits = Right(Output[i], 16);
       OutputLen = MinOutLen + (8 * Rightmost_Output_bits % Range);
       Customization = BitsToString(InnerMsg || Rightmost_Output_bits);
     }
-	
+
     OutputJ[j] = Output[1000];
   }
 
@@ -69,15 +69,15 @@ MCT(Msg, MaxOutLen, MinOutLen, MaxBlockSize, MinBlockSize)
   for (j = 0; j < 100; j++) 
   {
     for (i = 1; i < 1001; i++) 
-	{
+  {
       InnerMsg = Left(Output[i-1] || ZeroBits(128), 128);
       Output[i] = ParallelHash(InnerMsg, OutputLen, BlockSize, FunctionName, Customization);
       Rightmost_Output_bits = Right(Output[i], 16);
       OutputLen = MinOutLen + (8 * Rightmost_Output_bits % Range);
-	  BlockSize = MinBlockSize + Right(Rightmost_Output_bits, 8) % BlockRange;
+    BlockSize = MinBlockSize + Right(Rightmost_Output_bits, 8) % BlockRange;
       Customization = BitsToString(InnerMsg || Rightmost_Output_bits);
     }
-	
+  
     OutputJ[j] = Output[1000];
   }
 
@@ -104,10 +104,10 @@ MCT(Tuple, MaxOutLen, MinOutLen)
   {
     for (i = 1; i < 1001; i++) 
     {
-	  workingBits = Left(T[i-1][0] || ZeroBits(288), 288);
+      workingBits = Left(T[i-1][0] || ZeroBits(288), 288);
       tupleSize = Left(workingBits, 3) + 1; // never more than 8 tuples to a round
       for (k = 0; k < tupleSize; k++) 
-	  {
+    {
           T[i][k] = Substring of workingBits from (k * 288 / tupleSize) to ((k+1) * 288 / tupleSize - 1);
       }
       Output[i] = TupleHash(T[i], OutputLen, Customization);
@@ -115,7 +115,7 @@ MCT(Tuple, MaxOutLen, MinOutLen)
       OutputLen = MinOutLen + (8 * Rightmost_Output_bits % Range);
       Customization = BitsToString(T[i][0] || Rightmost_Output_bits);
     }
-	
+  
     OutputJ[j] = Output[1000];
   }
   
@@ -128,9 +128,11 @@ MCT(Tuple, MaxOutLen, MinOutLen)
 
 [source, code]
 ----
-BitsToString(bits) {
+BitsToString(bits) 
+{
   string = "";
-  foreach byte in bits {
+  foreach byte in bits 
+  {
       string = string + ASCII((byte % 26) + 65);
   }
 }
