--- a/src/sha/sections/05-capabilities.adoc
+++ b/src/sha/sections/05-capabilities.adoc
@@ -7,16 +7,26 @@
 This section describes the constructs for advertising support of hash algorithms to the ACVP server.
 
 [[caps_table]]
-
-[cols="<,<,<"]
 .Hash Algorithm Capabilities JSON Values
 |===
-| JSON Value| Description| JSON type
+| JSON Value | Description | JSON type
 
-| algorithm| The hash algorithm and mode to be validated.| string
-| revision| The algorithm testing revision to use.| string
-| messageLength| The message lengths in bits supported by the IUT. Minimum allowed is 0, maximum allowed is 65535.| domain
+| algorithm | The hash algorithm and mode to be validated. | string
+| revision | The algorithm testing revision to use. | string
+| messageLength | The message lengths in bits supported by the IUT. Minimum allowed is 0, maximum allowed is 65535. | domain
+| performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. | boolean
 |===
 
-The value of the algorithm property MUST be one of the elements from the list in <<supported_algs>>.
+The value of the algorithm property *MUST* be one of the elements from the list in <<supported_algs>>.
 
+The following is a example JSON object advertising support for SHA-256.
+
+[source, json]
+----
+{
+    "algorithm": "SHA2-256",
+    "revision": "1.0",
+    "messageLength": [{"min": 0, "max": 65535, "increment": 1}],
+    "performLargeDataTest": true
+}
+----
