Updates SHA3 documents for LDT, adds MCT pseudocode, and requirements based on FIPS202

--- a/src/sha/sections/04-testtypes.adoc
+++ b/src/sha/sections/04-testtypes.adoc
@@ -8,7 +8,7 @@ This section describes the design of the tests used to validate implementations 
 
 There are two types of tests for SHA-1 and SHA-2: functional tests and Monte Carlo tests. Each has a specific value to be used in the testType field. The testType field definitions are:
 
-* "AFT" - Algorithm Functional Test. These tests can be processed by the client using a normal 'hash' operation.  AFTs cause the implementation under test to exercise nomral operations on a single block, multiple blocks, or partial blocks. In all cases,random data is used. The functional tests are designed to verify that the logical components of the hash function (block chunking, block padding etc.) are operating correctly.
+* "AFT" - Algorithm Functional Test. These tests can be processed by the client using a normal 'hash' operation.  AFTs cause the implementation under test to exercise normal operations on a single block, multiple blocks, or partial blocks. In all cases, random data is used. The functional tests are designed to verify that the logical components of the hash function (block chunking, block padding etc.) are operating correctly.
 
 * "MCT" - Monte Carlo Test. These tests exercise the implementation under test under stenuous circumstances. The implementation under test must process the test vectors according to the correct algorithm and mode in this document. MCTs can help detect potential memory leaks over time, and problems in allocation of resources, addressing variables, error handling, and generally improper behavior in response to random inputs. Each MCT processes 100 pseudorandom tests. Each algorithm and mode SHOULD have at least one MCT group. See <<MC_test>> for implementation details.
 
@@ -17,11 +17,8 @@ There are two types of tests for SHA-1 and SHA-2: functional tests and Monte Car
 [[MC_test]]
 === Monte Carlo tests for SHA-1 and SHA-2
 
-The MCTs start with an initial condition (SEED which is a single message) and perform a series of chained computations.
+The MCTs start with an initial condition (SEED which is a single message) and perform a series of chained computations. The algorithm is shown below.
 
-The algorithm is shown in <<xml_figureMCT>>.
-
-[[xml_figureMCT]]
 .SHA-1 and SHA-2 Monte Carlo Test
 [source, code]
 ----
@@ -31,6 +28,7 @@ MD[0] = MD[1] = MD[2] = SEED
 		MSG[i] = MD[i-3] || MD[i-2] || MD[i-1]
 		MD[i] = SHA(MSG[i])
 	Output MD[1002]
+    SEED = MD[1002]
 ----
 
 [[LD_test]]
