--- a/src/sha3/sections/05-capabilities.adoc
+++ b/src/sha3/sections/05-capabilities.adoc
@@ -17,6 +17,7 @@ Each SHA3 and SHAKE algorithm capability advertised *SHALL* be a self-contained 
 | inEmpty| Implementation does accept null (zero-length) messages| boolean
 | outputLen| Output length for SHAKE| domain
 | outBit| SHAKE can output bit-oriented messages| boolean
+| performLargeDataTest| Determines if the server should incldue the large data test group defined in <<LD_test>>| boolean
 |===
 
 The following grid outlines which properties are *REQUIRED*, as well as all the possible values a server *MAY* support for SHA3 and SHAKE algorithms:
@@ -26,12 +27,44 @@ The following grid outlines which properties are *REQUIRED*, as well as all the 
 [cols="<,<,<,<,<"]
 .SHA3 and SHAKE Capabilities Applicability Grid
 |===
-| algorithm| inBit| inEmpty| outputLen| outBit
+| algorithm| inBit| inEmpty| outputLen| outBit| performLargeDataTest
 
-| SHA3-224| true, false| true, false| |
-| SHA3-256| true, false| true, false| |
-| SHA3-384| true, false| true, false| |
-| SHA3-512| true, false| true, false| |
-| SHAKE-128| true, false| true, false| {"Min": 16, "Max": 65536, "Inc": any}| true, false
-| SHAKE-256| true, false| true, false| {"Min": 16, "Max": 65536, "Inc": any}| true, false
+| SHA3-224| true, false| true, false| | | true, false
+| SHA3-256| true, false| true, false| | | true, false
+| SHA3-384| true, false| true, false| | | true, false
+| SHA3-512| true, false| true, false| | | true, false
+| SHAKE-128| true, false| true, false| {"Min": 16, "Max": 65536, "Inc": any}| true, false |
+| SHAKE-256| true, false| true, false| {"Min": 16, "Max": 65536, "Inc": any}| true, false |
 |===
+
+The following is a example JSON object advertising support for SHA3-256.
+
+[source, json]
+----
+{
+    "algorithm": "SHA3-256",
+    "revision": "1.0",
+    "inBit": true,
+    "inEmpty": true,
+    "performLargeDataTest": true
+}
+----
+
+The following is an example JSON object advertising support for SHAKE-128.
+
+[source, json]
+----
+{
+    "algorithm": "SHAKE-128",
+    "revision": "1.0",
+    "inBit": true,
+    "inEmpty": true,
+    "outBit": true,
+    "outputLen": [
+        {
+        "min": 16,
+        "max": 1024
+        }
+    ]
+}
+----
