Updates incorrect references of `KAS-SSC-*` -> `KAS-*-SSC` - closes #1017

--- a/src/kas/sp800-56br2/ssc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56br2/ssc/sections/05-capabilities.adoc
@@ -28,7 +28,7 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 |===
 | JSON Value| Description| JSON Type| Valid Values| Optional
 
-| algorithm | The algorithm under test| value | KAS-IFC, KTS-IFC | No
+| algorithm | The algorithm under test| value | KAS-IFC-SSC | No
 | revision | The algorithm testing revision to use. | value | "Sp800-56Br2" | No
 | prereqVals | Prerequisite algorithm validations| array of prereqAlgVal objects | See <<prereq_algs>> | No
 | keyGenerationMethods | The supported key generation methods. | array of string | See <<key_generation_methods>> | No
