Changes "confirmation" to "validation" within a requirements covered section. - To avoid confusion between "key confirmation" and the "confirmation" (or validation) of both parties arriving at the same shared secret `z` - https://github.com/usnistgov/ACVP-Server/issues/7

--- a/src/kas/sp800-56ar2/ffc/sections/04-testtypes.adoc
+++ b/src/kas/sp800-56ar2/ffc/sections/04-testtypes.adoc
@@ -23,7 +23,7 @@ The tests described in this document have the intention of ensuring an implement
 
 * SP 800-56a - 4.2 Key-Agreement Process. Both the ACVP server and IUT participate in the Key Agreement process. The server and IUT can both take the roles of party U/V, and as such the "performer" of steps depicted in "Figure 2: Key Agreement process" can vary.
 
-* SP 800-56a - 5.1 Cryptographic Hash Functions. All modes of performing KAS *SHALL* make use of a hash function. The hash function *MAY* be used for confirmation of a successfully generated shared secret Z *noKdfNoKc), or as a primitive within the KDF being tested (kdfNoKc and kdfKc).
+* SP 800-56a - 5.1 Cryptographic Hash Functions. All modes of performing KAS *SHALL* make use of a hash function. The hash function *MAY* be used for validation of a successfully generated shared secret Z *noKdfNoKc), or as a primitive within the KDF being tested (kdfNoKc and kdfKc).
 
 * SP 800-56a - 5.2 Message Authentication Code (MAC) Algorithm. A MAC is utilized for confirmation of success for kdfNoKc and kdfKc modes of KAS. Note - a MAC prerequisite is *REQUIRED* only for kdfKc, though is utilized for both kdfNoKc and kdfKc.
 
