Updates KAS "1.0" testing to reference SP800-56Ar2 - was previously referencing SP800-56Ar3. - https://github.com/usnistgov/ACVP-Server/issues/7

--- a/src/kas/sp800-56ar2/ffc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar2/ffc/sections/05-capabilities.adoc
@@ -59,7 +59,7 @@ The following function types *MAY* be advertised by the ACVP compliant crypto mo
 * dpGen - IUT can perform domain parameter generation (FFC only)
 * dpVal - IUT can perform domain parameter validation (FFC only)
 * keyPairGen - IUT can perform keypair generation.
-* fullVal - IUT can perform full public key validation ( <<SP800-56a>> section 5.6.2.3.1 / 5.6.2.3.3) 
+* fullVal - IUT can perform full public key validation ( <<SP800-56Ar2>> section 5.6.2.3.1 / 5.6.2.3.3) 
 * keyRegen - IUT can regenerate keys given a specific seed and domain parameter (pqg for FFC, curve for ECC)
 
 [[schemes]]
