--- a/src/kas/sp800-56cr1/hkdf/sections/04-testtypes.adoc
+++ b/src/kas/sp800-56cr1/hkdf/sections/04-testtypes.adoc
@@ -18,7 +18,7 @@ The tests described in this document have the intention of ensuring an implement
 
 ==== Requirements Covered
 
-* SP 800-56Cr1 - 5 Two-Step Key Derivation.  All functionality described in the specification is covered by ACVP testing.
+* SP 800-56Cr1 - 5 Two-Step Key Derivation.  HKDF is a subset of the TwoStep derivation function described and is covered by ACVP testing.
 
 ==== Requirements Not Covered
 
