--- a/src/rsa/sections/07-decprim-responses.adoc
+++ b/src/rsa/sections/07-decprim-responses.adoc
@@ -26,22 +26,25 @@ The following is an example of the response for RSA / Decryption Primitive / * .
   "algorithm": "RSA",
   "mode": "decryptionPrimitive",
   "revision": "1.0",
-  "isSample": true,
   "testGroups": [
     {
       "tgId": 1,
       "tests": [
         {
-          "tcId" : 1196,
-          "e" : "010001",
-          "n" : "d0c112f0bee36235d...",
-          "plainText" : "a60b879a8..."
-        },
-        {
-          "tcId" : 1197,
-          "e" : "010001",
-          "n" : "a7a1882a7fb896786...",
-          "testPassed": false
+          "tcId": 1,
+          "resultsArray": [
+            {
+              "e": "60BDBEF656869D",
+              "n": "8FA73CF9CAD37456B...",
+              "testPassed": false
+            },
+            {
+              "plainText": "009EDAE2D5934F...",
+              "e": "D6AA5EF807",
+              "n": "A86A73D47F605DCF...",
+              "testPassed": true
+            }
+          ]
         }
       ]
     }
