KAS KDF fixedInfo construction, uPartyInfo/vPartyInfo required - closes #1023

--- a/src/kas/sp800-56br2/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56br2/sections/05-capabilities.adoc
@@ -197,7 +197,7 @@ Note that this method is *REQUIRED* when testing KTS schemes.
 [[fixedinfopatcon]]
 ===== FixedInfoPatternConstruction
 
-IUTs *SHALL* be capable of specifying how the FixedInfo is constructed for the KAS/KTS negotiation.
+IUTs *MUST* be capable of specifying how the FixedInfo is constructed for the KAS/KTS negotiation. Note that for the purposes of testing against the ACVP system, both uPartyInfo and vPartyInfo are *REQUIRED* to be registered within the fixed info pattern.
 
 Pattern candidates:
 
