--- a/src/kas/sp800-56cr1/twostep/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56cr1/twostep/sections/05-capabilities.adoc
@@ -56,7 +56,7 @@ Note this capabilities object is very similar to the capability object from SP80
 [[fixedinfopatcon]]
 ==== FixedInfoPatternConstruction
 
-IUTs *SHALL* be capable of specifying how the FixedInfo is constructed for the KDF construction.
+IUTs *MUST* be capable of specifying how the FixedInfo is constructed for the KDF construction. Note that for the purposes of testing against the ACVP system, both uPartyInfo and vPartyInfo are *REQUIRED* to be registered within the fixed info pattern.
 
 Pattern candidates:
 
