--- a/src/kas/sp800-56ar3/ffc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ffc/sections/05-capabilities.adoc
@@ -154,7 +154,7 @@ Note this capabilities object is very similar to the capability object from SP80
 [[fixedinfopatcon]]
 ===== FixedInfoPatternConstruction
 
-IUTs *SHALL* be capable of specifying how the FixedInfo is constructed for the KAS/KTS negotiation.
+IUTs *MUST* be capable of specifying how the FixedInfo is constructed for the KAS/KTS negotiation. Note that for the purposes of testing against the ACVP system, both uPartyInfo and vPartyInfo are *REQUIRED* to be registered within the fixed info pattern.
 
 Pattern candidates:
 
