Changes boolean to integer array for LDT

--- a/src/sha3/sections/05-capabilities.adoc
+++ b/src/sha3/sections/05-capabilities.adoc
@@ -17,7 +17,7 @@ Each SHA3 and SHAKE algorithm capability advertised *SHALL* be a self-contained 
 | inEmpty| Implementation does accept null (zero-length) messages| boolean
 | outputLen| Output length for SHAKE| domain
 | outBit| SHAKE can output bit-oriented messages| boolean
-| performLargeDataTest| Determines if the server should incldue the large data test group defined in <<LD_test>>| boolean
+| performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. This property is *OPTIONAL*, and shall include the lengths in GB being tested. Valid options are {1, 2, 4, 8}. | integer array
 |===
 
 The following grid outlines which properties are *REQUIRED*, as well as all the possible values a server *MAY* support for SHA3 and SHAKE algorithms:
@@ -46,7 +46,7 @@ The following is a example JSON object advertising support for SHA3-256.
     "revision": "1.0",
     "inBit": true,
     "inEmpty": true,
-    "performLargeDataTest": true
+    "performLargeDataTest": [1, 2, 4, 8]
 }
 ----
 
