--- a/src/sha/sections/05-capabilities.adoc
+++ b/src/sha/sections/05-capabilities.adoc
@@ -14,7 +14,7 @@ This section describes the constructs for advertising support of hash algorithms
 | algorithm | The hash algorithm and mode to be validated. | string
 | revision | The algorithm testing revision to use. | string
 | messageLength | The message lengths in bits supported by the IUT. Minimum allowed is 0, maximum allowed is 65535. | domain
-| performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. | boolean
+| performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. This property is *OPTIONAL*, and shall include the lengths in GB being tested. Valid options are {1, 2, 4, 8}. | integer array
 |===
 
 The value of the algorithm property *MUST* be one of the elements from the list in <<supported_algs>>.
@@ -27,6 +27,6 @@ The following is a example JSON object advertising support for SHA-256.
     "algorithm": "SHA2-256",
     "revision": "1.0",
     "messageLength": [{"min": 0, "max": 65535, "increment": 1}],
-    "performLargeDataTest": true
+    "performLargeDataTest": [1, 2]
 }
 ----
