--- a/src/sha/sections/05-capabilities.adoc
+++ b/src/sha/sections/05-capabilities.adoc
@@ -14,10 +14,12 @@ This section describes the constructs for advertising support of hash algorithms
 | algorithm | The hash algorithm and mode to be validated. | string
 | revision | The algorithm testing revision to use. | string
 | messageLength | The message lengths in bits supported by the IUT. Minimum allowed is 0, maximum allowed is 65535. | domain
-| performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. This property is *OPTIONAL*, and shall include the lengths in GB being tested. Valid options are {1, 2, 4, 8}. | integer array
+| performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. This property is *OPTIONAL*, and shall include the lengths in GiB being tested. Valid options are {1, 2, 4, 8}. | integer array
 |===
 
 The value of the algorithm property *MUST* be one of the elements from the list in <<supported_algs>>.
+
+NOTE: The lengths provided in the 'performLargeDataTest' property are in gibebytes. 1GiB is equivalent to 2^30 bytes. 
 
 The following is a example JSON object advertising support for SHA-256.
 
