--- a/src/sha/sections/05-capabilities.adoc
+++ b/src/sha/sections/05-capabilities.adoc
@@ -19,7 +19,7 @@ This section describes the constructs for advertising support of hash algorithms
 
 The value of the algorithm property *MUST* be one of the elements from the list in <<supported_algs>>.
 
-NOTE: The lengths provided in the 'performLargeDataTest' property are in gibebytes. 1GiB is equivalent to 2^30 bytes. 
+NOTE: The lengths provided in the 'performLargeDataTest' property are in gibibytes. 1GiB is equivalent to 2^30 bytes. 
 
 The following is a example JSON object advertising support for SHA-256.
 
