--- a/src/sha3/sections/05-capabilities.adoc
+++ b/src/sha3/sections/05-capabilities.adoc
@@ -17,8 +17,10 @@ Each SHA3 and SHAKE algorithm capability advertised *SHALL* be a self-contained 
 | inEmpty| Implementation does accept null (zero-length) messages| boolean
 | outputLen| Output length for SHAKE| domain
 | outBit| SHAKE can output bit-oriented messages| boolean
-| performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. This property is *OPTIONAL*, and shall include the lengths in GB being tested. Valid options are {1, 2, 4, 8}. | integer array
+| performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. This property is *OPTIONAL*, and shall include the lengths in GiB being tested. Valid options are {1, 2, 4, 8}. | integer array
 |===
+
+NOTE: The lengths provided in the 'performLargeDataTest' property are in gibibytes. 1GiB is equivalent to 2^30 bytes. 
 
 The following grid outlines which properties are *REQUIRED*, as well as all the possible values a server *MAY* support for SHA3 and SHAKE algorithms:
 
