Corrections to TLS v1.3 labels/examples - #1027

--- a/src/tls1.3/sections/05-capabilities.adoc
+++ b/src/tls1.3/sections/05-capabilities.adoc
@@ -11,9 +11,9 @@ A registration *SHALL* use these properties
 |===
 | JSON Property | Description | JSON Type | Valid Values
 
-| algorithm | Name of the algorithm to be validated | string | "kdf-components"
-| mode | Mode of the algorithm to be validated | string | "tls"
-| revision | ACVP Test version | string | "1.0"
+| algorithm | Name of the algorithm to be validated | string | "TLS-v1.3"
+| mode | Mode of the algorithm to be validated | string | "KDF"
+| revision | ACVP Test version | string | "RFC8446"
 | hmacAlg | HMAC functions supported | array | See <<valid-hmac>>
 | runningMode | The supported key exchange modes for the KDF https://tools.ietf.org/html/rfc8446#section-2 | array | See <<valid-runningMode>>
 |===
