--- a/src/tls1.3/sections/06-test-vectors.adoc
+++ b/src/tls1.3/sections/06-test-vectors.adoc
@@ -43,9 +43,9 @@ Here is an abbreviated yet fully constructed example of the prompt.
 ----
 {
     "vsId": 1,
-    "algorithm": "kdf-components",
-    "mode": "tls",
-    "revision": "1.0",
+    "algorithm": "TLS-v1.13",
+    "mode": "KDF",
+    "revision": "RFC8446",
     "testGroups": [
         {
             "tgId": 1,
